// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts (Error) renders correctly 1`] = `
<View
  error="Error hey"
  style={
    Array [
      Object {},
      Array [
        Array [],
      ],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#ff190c",
            "fontSize": 15,
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 5,
          },
          Array [
            Object {
              "fontFamily": "HelveticaNeue",
              "marginLeft": 0,
              "marginRight": 0,
            },
            Array [],
          ],
          undefined,
        ],
      ]
    }
  />
</View>
`;

exports[`Alerts (Status) renders correctly 1`] = `
<View
  status="Something's happening..."
  style={
    Array [
      Object {},
      Array [
        Array [],
      ],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#ff190c",
            "fontSize": 15,
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 5,
          },
          Array [
            Object {
              "fontFamily": "HelveticaNeue",
              "marginLeft": 0,
              "marginRight": 0,
            },
            Array [],
          ],
          undefined,
        ],
      ]
    }
  />
</View>
`;

exports[`Alerts (Sucess) renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Array [],
      ],
    ]
  }
  success="Hello Success"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#ff190c",
            "fontSize": 15,
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 5,
          },
          Array [
            Object {
              "fontFamily": "HelveticaNeue",
              "marginLeft": 0,
              "marginRight": 0,
            },
            Array [],
          ],
          undefined,
        ],
      ]
    }
  />
</View>
`;

exports[`Alerts (empty) renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Array [],
      ],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {},
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Array [
          Object {
            "color": "#ff190c",
            "fontSize": 15,
            "marginBottom": 1,
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 5,
          },
          Array [
            Object {
              "fontFamily": "HelveticaNeue",
              "marginLeft": 0,
              "marginRight": 0,
            },
            Array [],
          ],
          undefined,
        ],
      ]
    }
  />
</View>
`;
